nicer layout for browse filters

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,6 +1,7 @@
 @import url("variables.css");
 @import url("components/nav-bar.css");
 @import url("components/heading.css");
+@import url("components/browse/nav-menu.css");
 
 html {
   margin: 0;
