--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,7 +1,5 @@
 @import url("variables.css");
-@import url("components/nav-bar.css");
-@import url("components/heading.css");
-@import url("components/browse/nav-menu.css");
+@import url("components/index.css");
 
 html {
   margin: 0;
