make navigation partial dynamic

--- a/src/lib/views/index.hbs
+++ b/src/lib/views/index.hbs
@@ -3,7 +3,7 @@
   <body>
     {{> heading}}
     {{#> section }}
-      {{> navigation}}
+      {{> navigation isHome=true}}
       <p>
         Simple database of Czechia TLD domains which were registered in the
         past. You can search by its name to get its detail.
