--- a/src/lib/views/layout.hbs
+++ b/src/lib/views/layout.hbs
@@ -1,6 +1,6 @@
 <head>
   <title>czdomains</title>
-  <link rel="stylesheet" href="/styles/main.css" />
+  <link rel='stylesheet' href='/styles/main.css' />
 </head>
 <body>
   {{{body}}}
