--- a/static/styles/common/index.css
+++ b/static/styles/common/index.css
@@ -1,5 +1,5 @@
 /* Common styles / partials */
 
-@import url("heading.css");
-@import url("section.css");
-@import url("navigation.css");
+@import url('heading.css');
+@import url('section.css');
+@import url('navigation.css');
