BREAKING: add UUIDs to domains table, remove time columns

--- a/src/lib/views/browse.hbs
+++ b/src/lib/views/browse.hbs
@@ -9,8 +9,9 @@
       </p>
       <ul>
         {{#each list}}
-          <li>ID: {{id}}</li>
-          <li>value: {{value}}</li>
+          <li>
+            <a href="/domain/{{uuid}}">{{value}}</a>
+          </li>
         {{/each}}
       </ul>
     {{/ section }}
