--- a/src/lib/views/browse.hbs
+++ b/src/lib/views/browse.hbs
@@ -7,7 +7,15 @@
     {{> heading}}
     {{#> section }}
       {{> navigation isBrowse=true}}
-      {{> browse-navigation filter=filter}}
+      <ul class="browse-navigation">
+        {{> browse-navigation-item url="all" label="All" filter=filter}}
+        {{> browse-navigation-item url="numbers" label="0-9" filter=filter}}
+        {{> browse-navigation-item url="a_e" label="a-e" filter=filter}}
+        {{> browse-navigation-item url="f_j" label="f-j" filter=filter}}
+        {{> browse-navigation-item url="k_o" label="k-o" filter=filter}}
+        {{> browse-navigation-item url="p_t" label="p-t" filter=filter}}
+        {{> browse-navigation-item url="u_z" label="u-z" filter=filter}}
+      </ul>
       <ul>
         {{#each list}}
           <li>
