--- a/src/lib/views/browse.hbs
+++ b/src/lib/views/browse.hbs
@@ -23,6 +23,17 @@
           </li>
         {{/each}}
       </ul>
+      {{> pagination
+            path="/browse"
+            filter=filter
+            page=page
+            previous=previous
+            next=next
+            prevPage=prevPage
+            nextPage=nextPage
+            totalPages=totalPages
+            size=size
+      }}
     {{/ section }}
   </body>
 </html>
