--- a/src/lib/views/includes/pagination.njk
+++ b/src/lib/views/includes/pagination.njk
@@ -1,20 +1,23 @@
 <form
   method="GET"
-  action="{{ concat path '/' filter }}"
+  action="{{ pagination.path ~ "/" ~ pagination.filter }}"
   autocomplete="off"
   name="pagination"
   class="pagination"
 >
-  {{#if previous}}
+  {% set previous = pagination.page > 0 %}
+  {% set next = pagination.page < pagination.totalCount %}
+
+  {% if previous %}
     <button
       type="submit"
       name="page"
-      value="{{ prevPage }}"
+      value="{{ page - 1 }}"
       class="pagination__button pagination__button--previous"
     >
       Previous
     </button>
-  {{ else }}
+  {% else %}
     <button
       type="submit"
       disabled
@@ -23,28 +26,28 @@
     >
       Previous
     </button>
-  {{/if}}
+  {% endif %}
 
   <span class="pagination__current">
-    Page {{ page }} of {{ totalPages }}
+    Page {{ pagination.page }} of {{ pagination.totalCount }}
   </span>
 
   <input
     type="hidden"
     name="size"
-    value="{{ size }}"
+    value="{{ pagination.size }}"
   />
 
-  {{#if next}}
+  {% if next %}
     <button
       type="submit"
       name="page"
-      value="{{ nextPage }}"
+      value="{{ page + 1 }}"
       class="pagination__button pagination__button--next"
     >
       Next
     </button>
-  {{ else }}
+  {% else %}
     <button
       type="submit"
       name="page"
@@ -53,5 +56,5 @@
     >
       Next
     </button>
-  {{/if}}
+  {% endif %}
 </form>
