--- a/src/lib/views/browse.njk
+++ b/src/lib/views/browse.njk
@@ -2,6 +2,7 @@
 
 {% block head %}
   <link rel="stylesheet" href="/styles/browse.css">
+  <link rel="stylesheet" href="/styles/pagination.css">
 {% endblock %}
 
 {% block content %}
