allow to change page size dynamically

--- a/src/lib/views/includes/pagination.njk
+++ b/src/lib/views/includes/pagination.njk
@@ -45,21 +45,34 @@
 
   <span class="pagination__current">
     <button type="submit" hidden></button>
-    Page
+    <label for="current-page">Page:</label>
       <input
         type="number"
         value="{{ pagination.page }}"
         name="page"
         class="pagination__current__input"
+        id="current-page"
       />
       / {{ pagination.totalCount }}
   </span>
 
-  <input
-    type="hidden"
+  <label for="per-page">Size:</label>
+  <select
+    value={{ pagination.size | string }}
     name="size"
-    value="{{ pagination.size }}"
-  />
+    id="per-page"
+    class="pagination__per"
+    onchange="pagination.submit()"
+  >
+    {% set paginationOption = { value: 10, currentValue: pagination.size } %}
+    {% include "./pagination-size-option.njk" %}
+    {% set paginationOption = { value: 20, currentValue: pagination.size } %}
+    {% include "./pagination-size-option.njk" %}
+    {% set paginationOption = { value: 50, currentValue: pagination.size } %}
+    {% include "./pagination-size-option.njk" %}
+    {% set paginationOption = { value: 100, currentValue: pagination.size } %}
+    {% include "./pagination-size-option.njk" %}
+  </select>
 
   {% if next and pagination.totalCount > 0 %}
     {% set pageQuery = "page" ~ "=" ~ (pagination.page + 1) %}
