style pagination size select

--- a/src/lib/views/includes/pagination-size-option.njk
+++ b/src/lib/views/includes/pagination-size-option.njk
@@ -1,7 +1,7 @@
 <option
   value={{ paginationOption.value }}
   {% if paginationOption.value === paginationOption.currentValue %}selected{% endif %}
-  class="pagination__per__option"
+  class="pagination__per__select__option"
 >
   {{ paginationOption.value }}
 </option>
