display latest import on index page

--- a/src/lib/views/index.njk
+++ b/src/lib/views/index.njk
@@ -41,4 +41,6 @@
     <dt>What is the story behind TLD</dt>
     <dd>TBD</dd>
   </dl>
+  <hr/>
+  <em>Latest addition: {{ lastImport or "N/A" }}</em>
 {% endblock %}
