--- a/src/lib/views/index.njk
+++ b/src/lib/views/index.njk
@@ -41,6 +41,10 @@
     <dt>What is the story behind TLD</dt>
     <dd>TBD</dd>
   </dl>
+  <h4>Attributions</h4>
+  <p>
+    czdomains is using IP2Location.io <a href=https://www.ip2location.io>IP geolocation</a> web service.
+  </p>
   <hr/>
   <em>Latest addition: {{ lastImport.toLocaleString() if lastImport else "N/A" }}</em>
 {% endblock %}
