--- a/src/lib/views/index.njk
+++ b/src/lib/views/index.njk
@@ -8,8 +8,7 @@
   {% set navigation = { isHome: true } %}
   {% include "includes/navigation.njk" %}
   <p>
-    Simple database of Czechia TLD domains which were registered in the
-    past. You can search by its name to get its detail.
+    {{ intlGet("home.about") }}
   </p>
   <p>
     Some entries contain
