--- a/src/lib/views/layout.njk
+++ b/src/lib/views/layout.njk
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ language }}">
   <head>
     <title>czdomains</title>
     <link rel='stylesheet' href='/styles/main.css' />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block head %}{% endblock %}
   </head>
   <body>
