--- a/src/lib/views/index.njk
+++ b/src/lib/views/index.njk
@@ -48,6 +48,9 @@
   <p>
     czdomains is using IP2Location.io <a href=https://www.ip2location.io>IP geolocation</a> web service.
   </p>
+  <p>
+    The icons come from <a href="https://archive.org/details/html-clipart-CD/HTML_CLIPART/">HTML Clipart by JAL Tech (archive link)</a>.
+  </p>
   <hr/>
   <div class="footer">
     <em>Latest addition: {{ lastImport.toLocaleString() if lastImport else "N/A" }}</em>
