--- a/src/lib/views/index.njk
+++ b/src/lib/views/index.njk
@@ -20,38 +20,54 @@
   </p>
   <h4>FAQ</h4>
   <dl>
-    <dt>What is Czechia?</dt>
+    <dt>{{ intlGet("home.faq.tldHistoryQuestion") }}</dt>
     <dd>
-      It is a small country of approximately 10.5 million inhabitants
-      located in central Europe. It's also called Czech Republic, formerly
-      it was known as Czechoslovakia (pre 1993). Read more
-      <a
-        href="https://en.wikipedia.org/wiki/Czech_Republic"
-        rel="noreferrer noopener"
-        target="_blank"
-      >
-        here
-      </a>
+      {{ formatMessage(
+           intlGet("home.faq.tldHistoryAnswer"), {
+             source: "<a href='https://muzeuminternetu.cz/info/y1991.php3' target='_blank' rel='noreferrer noopener'>muzeuminternetu.cz</a>"
+           }) | safe }}
     </dd>
-    <dt>What is the story behind TLD</dt>
-    <dd>TBD</dd>
+    <dt>{{ intlGet("home.faq.tldCreateQuestion") }}</dt>
+    <dd>
+      {{ formatMessage(
+           intlGet("home.faq.tldCreateAnswer"), {
+             source: "<a href='https://muzeuminternetu.cz/info/y1993.php3' target='_blank' rel='noreferrer noopener'>muzeuminternetu.cz</a>"
+           }) | safe }}
+    </dd>
+    <dt>{{ intlGet("home.faq.firstCzWebsiteQuestion") }}</dt>
+    <dd>
+      {{ formatMessage(
+           intlGet("home.faq.firstCzWebsiteAnswer"), {
+             source: "<a href='https://www.muzeuminternetu.cz/expo/fzu.php3' target='_blank' rel='noreferrer noopener'>www</a>"
+           }) | safe }}
+    </dd>
   </dl>
-  <h4>Attributions</h4>
+  <h4>{{ intlGet("home.attributions.title") }}</h4>
   <p>
-    czdomains is using IP2Location.io <a href=https://www.ip2location.io>IP geolocation</a> web service.
+    {{ formatMessage(
+         intlGet("home.attributions.whois"), {
+           source: "<a href=https://www.ip2location.io>IP geolocation</a>"
+         }) | safe }}
   </p>
   <p>
-    The icons come from <a href="https://archive.org/details/html-clipart-CD/HTML_CLIPART/">HTML Clipart by JAL Tech (archive link)</a>.
+    {{ formatMessage(
+         intlGet("home.attributions.icons"), {
+           source: "<a href='https://archive.org/details/html-clipart-CD/HTML_CLIPART/'>HTML Clipart by JAL Tech (archive link)</a>"
+         }) | safe }}
   </p>
   <hr/>
   <div class="footer">
-    <em>Latest addition: {{ lastImport.toLocaleString() if lastImport else "N/A" }}</em>
+    <em>
+      {{ formatMessage(intlGet("home.footer.lastUpdate"), {
+        date: lastImport.toLocaleString()
+      }) }}
+    </em>
     <span>
       <form
         action="/language"
         method="POST"
       >
-        Language: <input type="submit" class="{{ 'footer__language__button--active' if language === 'en' else 'footer__language__button' }}" value="en" name="language" /> <input type="submit" class="{{ 'footer__language__button--active' if language === 'cz' else 'footer__language__button' }}" value="cz" name="language" />
+        {{ intlGet("home.footer.language") }}: <input type="submit" class="{{ 'footer__language__button--active' if language === 'en' else 'footer__language__button' }}" value="en" name="language" /> <input type="submit" class="{{ 'footer__language__button--active' if language === 'cz' else 'footer__language__button' }}" value="cz" name="language" />
       </form>
     </span>
   </div>
